app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bomberman
  labels:
    app: bomberman
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: bomberman
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bomberman-deployment
  labels:
    app: bomberman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bomberman
  template:
    metadata:
      labels:
        app: bomberman
    spec:
      containers:
        - name: bomberman
          image: "acc1on/mycool:bomberman"
          imagePullPolicy: Always
          resources:
            limits:
              memory: 400Mi
              cpu: 1
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8000
